logparser/src/main/java/at/daho/logparsingproject/logparser/antlr/parser/PostfixLogParser.java
// Generated from PostfixLogParser.g4 by ANTLR 4.9

package at.daho.logparsingproject.logparser.antlr.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PostfixLogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, NewLine=2, Text=3, Colon=4, Slash=5, RoundBracketOpen=6, RoundBracketClose=7, 
		SquareBracketOpen=8, SquareBracketClose=9, Dot=10, Comma=11, Singlequote=12, 
		Doublequote=13, Quote=14, Connect=15, Disconnect=16, From=17, AnonymousTlsConnectionEstablished=18, 
		TlsVersion=19, WithCipher=20, Bits=21, Warning=22, Lost=23, Statistics=24, 
		SaslLoginAuthenticationFailed=25, LostConnectionAfter=26, MaxConnectionRate=27, 
		MaxConnectionCount=28, MaxCacheSize=29, SixtySeconds=30, At=31, For=32, 
		NotInternal=33, Less=34, Greater=35, NotAuthenticated=36, DkimVerificationSuccessful=37, 
		SelectorEquals=38, DomainEquals=39, Ssl=40, FromEquals=41, ToEquals=42, 
		RelayEquals=43, DelayEquals=44, DelaysEquals=45, SizeEquals=46, NumRecipientsEquals=47, 
		MessageIdEquals=48, ClientEquals=49, PrivateDovecot=50, DsnEquals=51, 
		StatusEquals=52, Saved=53, Removed=54, KeyRetrieval=55, DoesNotResolveToAddress=56, 
		Hostname=57, Char=58, Int=59, Float=60, Month=61, Jan=62, Feb=63, Mar=64, 
		Apr=65, May=66, Jun=67, Jul=68, Aug=69, Sep=70, Oct=71, Nov=72, Dec=73, 
		Ip=74, Word=75, Alphanum=76, Email=77, String=78;
	public static final int
		RULE_log = 0, RULE_logline = 1, RULE_serverNameWithIp = 2, RULE_cipher = 3, 
		RULE_bits = 4, RULE_saslAuthString = 5, RULE_command = 6, RULE_numConnections = 7, 
		RULE_size = 8, RULE_mailIdentifier = 9, RULE_timestamp = 10, RULE_time = 11, 
		RULE_day = 12, RULE_hour = 13, RULE_minute = 14, RULE_second = 15, RULE_logheader = 16, 
		RULE_pid = 17, RULE_service = 18, RULE_process = 19, RULE_localTransport = 20, 
		RULE_event = 21, RULE_connect = 22, RULE_disconnect = 23, RULE_anonymousTlsConnection = 24, 
		RULE_failedSaslLogin = 25, RULE_reverseLookupDifferent = 26, RULE_lostConnectionAfterAuth = 27, 
		RULE_cleanupMessageId = 28, RULE_getMailFrom = 29, RULE_getMailTo = 30, 
		RULE_getMailRemovedFromQueue = 31, RULE_statistics = 32, RULE_statisticsMaxConRate = 33, 
		RULE_statisticsMaxConCount = 34, RULE_statisticsMaxCacheSize = 35, RULE_transaction = 36, 
		RULE_openDkim = 37, RULE_openDkimNotInternal = 38, RULE_openDkimNotAuthenticated = 39, 
		RULE_openDkimVerificationSuccessful = 40, RULE_openDkimKeySelection = 41, 
		RULE_openDkimKeyRetrieval = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"log", "logline", "serverNameWithIp", "cipher", "bits", "saslAuthString", 
			"command", "numConnections", "size", "mailIdentifier", "timestamp", "time", 
			"day", "hour", "minute", "second", "logheader", "pid", "service", "process", 
			"localTransport", "event", "connect", "disconnect", "anonymousTlsConnection", 
			"failedSaslLogin", "reverseLookupDifferent", "lostConnectionAfterAuth", 
			"cleanupMessageId", "getMailFrom", "getMailTo", "getMailRemovedFromQueue", 
			"statistics", "statisticsMaxConRate", "statisticsMaxConCount", "statisticsMaxCacheSize", 
			"transaction", "openDkim", "openDkimNotInternal", "openDkimNotAuthenticated", 
			"openDkimVerificationSuccessful", "openDkimKeySelection", "openDkimKeyRetrieval"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "':'", "'/'", "'('", "')'", "'['", "']'", "'.'", 
			"','", "'''", "'\"'", null, "'connect'", "'disconnect'", "'from'", "'Anonymous TLS connection established'", 
			null, "'with cipher'", "'bits'", "'warning'", "'lost'", "'statistics'", 
			"'SASL LOGIN authentication failed'", "'lost connection after'", "'max connection rate'", 
			"'max connection count'", "'max cache size'", "'60s'", "'at'", "'for'", 
			"'not internal'", "'<'", "'>'", "'not authenticated'", "'DKIM verification successful'", 
			"'s='", "'d='", "'SSL'", "'from='", "'to='", "'relay='", "'delay='", 
			"'delays='", "'size='", "'nrcpt='", "'message-id='", "'client='", "'private/dovecot-lmtp'", 
			"'dsn='", "'status='", "'Saved'", "'removed'", "'key retrieval'", "'does not resolve to address'", 
			"'hostname'", null, null, null, null, "'Jan'", "'Feb'", "'Mar'", "'Apr'", 
			"'May'", "'Jun'", "'Jul'", "'Aug'", "'Sep'", "'Oct'", "'Nov'", "'Dec'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "NewLine", "Text", "Colon", "Slash", "RoundBracketOpen", 
			"RoundBracketClose", "SquareBracketOpen", "SquareBracketClose", "Dot", 
			"Comma", "Singlequote", "Doublequote", "Quote", "Connect", "Disconnect", 
			"From", "AnonymousTlsConnectionEstablished", "TlsVersion", "WithCipher", 
			"Bits", "Warning", "Lost", "Statistics", "SaslLoginAuthenticationFailed", 
			"LostConnectionAfter", "MaxConnectionRate", "MaxConnectionCount", "MaxCacheSize", 
			"SixtySeconds", "At", "For", "NotInternal", "Less", "Greater", "NotAuthenticated", 
			"DkimVerificationSuccessful", "SelectorEquals", "DomainEquals", "Ssl", 
			"FromEquals", "ToEquals", "RelayEquals", "DelayEquals", "DelaysEquals", 
			"SizeEquals", "NumRecipientsEquals", "MessageIdEquals", "ClientEquals", 
			"PrivateDovecot", "DsnEquals", "StatusEquals", "Saved", "Removed", "KeyRetrieval", 
			"DoesNotResolveToAddress", "Hostname", "Char", "Int", "Float", "Month", 
			"Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
			"Nov", "Dec", "Ip", "Word", "Alphanum", "Email", "String"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PostfixLogParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PostfixLogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class LogContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PostfixLogParser.EOF, 0); }
		public List<LoglineContext> logline() {
			return getRuleContexts(LoglineContext.class);
		}
		public LoglineContext logline(int i) {
			return getRuleContext(LoglineContext.class,i);
		}
		public LogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterLog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitLog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitLog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogContext log() throws RecognitionException {
		LogContext _localctx = new LogContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_log);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Month) {
				{
				{
				setState(86);
				logline();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoglineContext extends ParserRuleContext {
		public LogheaderContext logheader() {
			return getRuleContext(LogheaderContext.class,0);
		}
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public TerminalNode NewLine() { return getToken(PostfixLogParser.NewLine, 0); }
		public LoglineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterLogline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitLogline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitLogline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoglineContext logline() throws RecognitionException {
		LoglineContext _localctx = new LoglineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			logheader();
			setState(95);
			event();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NewLine) {
				{
				setState(96);
				match(NewLine);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServerNameWithIpContext extends ParserRuleContext {
		public TerminalNode SquareBracketOpen() { return getToken(PostfixLogParser.SquareBracketOpen, 0); }
		public TerminalNode Ip() { return getToken(PostfixLogParser.Ip, 0); }
		public TerminalNode SquareBracketClose() { return getToken(PostfixLogParser.SquareBracketClose, 0); }
		public TerminalNode Word() { return getToken(PostfixLogParser.Word, 0); }
		public TerminalNode String() { return getToken(PostfixLogParser.String, 0); }
		public ServerNameWithIpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serverNameWithIp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterServerNameWithIp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitServerNameWithIp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitServerNameWithIp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServerNameWithIpContext serverNameWithIp() throws RecognitionException {
		ServerNameWithIpContext _localctx = new ServerNameWithIpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_serverNameWithIp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==Word || _la==String) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(100);
			match(SquareBracketOpen);
			setState(101);
			match(Ip);
			setState(102);
			match(SquareBracketClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CipherContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(PostfixLogParser.String, 0); }
		public CipherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cipher; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterCipher(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitCipher(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitCipher(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CipherContext cipher() throws RecognitionException {
		CipherContext _localctx = new CipherContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cipher);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BitsContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(PostfixLogParser.Int, 0); }
		public BitsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bits; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterBits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitBits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitBits(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BitsContext bits() throws RecognitionException {
		BitsContext _localctx = new BitsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bits);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaslAuthStringContext extends ParserRuleContext {
		public TerminalNode Alphanum() { return getToken(PostfixLogParser.Alphanum, 0); }
		public SaslAuthStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saslAuthString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterSaslAuthString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitSaslAuthString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitSaslAuthString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SaslAuthStringContext saslAuthString() throws RecognitionException {
		SaslAuthStringContext _localctx = new SaslAuthStringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_saslAuthString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(Alphanum);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public TerminalNode Word() { return getToken(PostfixLogParser.Word, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(Word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumConnectionsContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(PostfixLogParser.Int, 0); }
		public NumConnectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numConnections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterNumConnections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitNumConnections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitNumConnections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumConnectionsContext numConnections() throws RecognitionException {
		NumConnectionsContext _localctx = new NumConnectionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numConnections);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(PostfixLogParser.Int, 0); }
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitSize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_size);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MailIdentifierContext extends ParserRuleContext {
		public TerminalNode Alphanum() { return getToken(PostfixLogParser.Alphanum, 0); }
		public MailIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mailIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterMailIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitMailIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitMailIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MailIdentifierContext mailIdentifier() throws RecognitionException {
		MailIdentifierContext _localctx = new MailIdentifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mailIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(Alphanum);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimestampContext extends ParserRuleContext {
		public TerminalNode Month() { return getToken(PostfixLogParser.Month, 0); }
		public DayContext day() {
			return getRuleContext(DayContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public TimestampContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timestamp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterTimestamp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitTimestamp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitTimestamp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimestampContext timestamp() throws RecognitionException {
		TimestampContext _localctx = new TimestampContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_timestamp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(Month);
			setState(119);
			day();
			setState(120);
			time();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public HourContext hour() {
			return getRuleContext(HourContext.class,0);
		}
		public List<TerminalNode> Colon() { return getTokens(PostfixLogParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(PostfixLogParser.Colon, i);
		}
		public MinuteContext minute() {
			return getRuleContext(MinuteContext.class,0);
		}
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitTime(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			hour();
			setState(123);
			match(Colon);
			setState(124);
			minute();
			setState(125);
			match(Colon);
			setState(126);
			second();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DayContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(PostfixLogParser.Int, 0); }
		public DayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_day; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitDay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitDay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DayContext day() throws RecognitionException {
		DayContext _localctx = new DayContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_day);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HourContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(PostfixLogParser.Int, 0); }
		public HourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hour; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).enterHour(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostfixLogParserListener ) ((PostfixLogParserListener)listener).exitHour(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostfixLogParserVisitor ) return ((PostfixLogParserVisitor<? extends T>)visitor).visitHour(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HourContext hour() throws RecognitionException {
		HourContext _localctx = new HourContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_hour);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
